--- a/app/ghPages.html
+++ b/app/ghPages.html
@@ -12,14 +12,14 @@
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- iOS home screen icons -->
-    <meta name="apple-mobile-web-app-title" content="react boilerplate">
+    <meta name="apple-mobile-web-app-title" content="Every Hour">
     <link rel="apple-touch-icon" sizes="120x120" href="/every-hour/icon-120x120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/every-hour/icon-152x152.png">
     <link rel="apple-touch-icon" sizes="167x167" href="/every-hour/icon-167x167.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/every-hour/icon-180x180.png">
 
     <link rel="icon" href="/every-hour/favicon.ico" />
-    <title>React.js Boilerplate</title>
+    <title>Every Hour</title>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
